--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=dev
 APP_KEY=base64:py/WTN+2RxDqYQQBj9J/THTaWsycphh6QqUkzdo4U8o=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
