--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
-version: "3.7"
+version: "3.8"
+
 services:
   app:
       build:
-        args:
-          user: ani
-          uid: 1000
         context: ./
         dockerfile: Dockerfile
       image: anitech
@@ -13,6 +11,7 @@ services:
       working_dir: /var/www/
       volumes:
         - ./:/var/www
+        - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
       networks:
         - anitech
   db:
@@ -31,7 +30,7 @@ services:
       networks:
         - anitech
   nginx:
-      image: nginx:1.17-alpine
+      image: nginx:alpine
       container_name: anitech-nginx
       restart: unless-stopped
       ports:
