--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     container_name: website-ani-laravel
     restart: unless-stopped
     working_dir: /var/www
+    expose:
+      - 8000
     volumes:
       - .:/var/www
       - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
@@ -20,12 +22,22 @@ services:
     container_name: website-ani-nginx
     restart: unless-stopped
     ports:
-      - "8000:80"
+      - 80:80
+      - 443:443
     volumes:
-      - .:/var/www
-      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     networks:
       - laravel
+
+    certbot:
+      image: certbot/certbot
+      container_name: website-ani-certbot
+      volumes: 
+        - ./certbot/conf:/etc/letsencrypt
+        - ./certbot/www:/var/www/certbot
+      command: certonly --webroot -w /var/www/certbot --keep-until-expiring --email aniteknologi@gmail.com -d anitech.id --agree-tos
 
   db:
     image: mysql:5.7
