--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,16 +1,25 @@
-events {
-    worker_connections  1024;
-}
-
 http {
     server_tokens off;
     charset utf-8;
 
+    # always redirect to https
     server {
         listen 80 default_server;
-        index index.php index.html;
 
         server_name _;
+
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl http2;
+        # use the certificates
+        ssl_certificate     /etc/letsencrypt/live/{domain}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/{domain}/privkey.pem;
+        server_name {domain};
+        root /var/www/html;
+        index index.php index.html index.htm;
+
 
         location / {
             proxy_pass http://app:8000/;
