--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,8 @@ services:
     container_name: anitech-db
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: secret
-      MYSQL_DATABASE: moonevent
+      MYSQL_ROOT_PASSWORD: anitech123
+      MYSQL_DATABASE: dbanitech
     volumes:
       - dbdata:/var/lib/mysql
     networks:
